--- a/samples/rust/.cargo/config.toml
+++ b/samples/rust/.cargo/config.toml
@@ -1,3 +1,6 @@
 [build]
 [target.aarch64-apple-darwin]
 linker = "zig-cc-aarch64-macos"
+
+[target.x86_64-apple-darwin]
+linker = "zig-cc-x86_64-macos"
